SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1109438

--- a/akonadi/contact/editor/im/protocols/aimprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/aimprotocol.desktop
@@ -5,6 +5,7 @@ X-KDE-ServiceTypes=KABC/IMProtocol,KPluginInfo
 X-KDE-InstantMessagingKABCField=messaging/aim
 Comment=AIM Protocol
 Comment[ca]=Protocol AIM
+Comment[ca@valencia]=Protocol AIM
 Comment[en_GB]=AIM Protocol
 Comment[nb]=AIM-protokoll
 Comment[nds]=AIM-Protokoll
@@ -17,6 +18,7 @@ Comment[uk]=Протокол AIM
 Comment[x-test]=xxAIM Protocolxx
 Name=AIM
 Name[ca]=AIM
+Name[ca@valencia]=AIM
 Name[en_GB]=AIM
 Name[nb]=AIM
 Name[nds]=AIM
