--- a/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
@@ -5,6 +5,7 @@ X-KDE-ServiceTypes=KABC/IMProtocol,KPluginInfo
 X-KDE-InstantMessagingKABCField=messaging/gadu
 Comment=Gadu-Gadu Protocol
 Comment[ca]=Protocol Gadu-Gadu
+Comment[ca@valencia]=Protocol Gadu-Gadu
 Comment[en_GB]=Gadu-Gadu Protocol
 Comment[nb]=Gadu-Gadu-protokoll
 Comment[nds]=Gadu-Gadu-Protokoll
@@ -17,6 +18,7 @@ Comment[uk]=Протокол Gadu-Gadu
 Comment[x-test]=xxGadu-Gadu Protocolxx
 Name=Gadu-Gadu
 Name[ca]=Gadu-Gadu
+Name[ca@valencia]=Gadu-Gadu
 Name[en_GB]=Gadu-Gadu
 Name[nb]=Gadu-Gadu
 Name[nds]=Gadu-Gadu
