--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -5,6 +5,7 @@ X-KDE-ServiceTypes=KABC/IMProtocol,KPluginInfo
 X-KDE-InstantMessagingKABCField=messaging/groupwise
 Comment=Novell GroupWise Messenger
 Comment[ca]=Novell GroupWise Messenger
+Comment[ca@valencia]=Novell GroupWise Messenger
 Comment[en_GB]=Novell GroupWise Messenger
 Comment[nb]=Novell GroupWise meldingsprogram
 Comment[nds]=Novell-GroupWise-Kortnarichtenmaker
@@ -17,6 +18,7 @@ Comment[uk]=Програма обміну повідомленнями Novell Gr
 Comment[x-test]=xxNovell GroupWise Messengerxx
 Name=GroupWise
 Name[ca]=GroupWise
+Name[ca@valencia]=GroupWise
 Name[en_GB]=GroupWise
 Name[nb]=GroupWise
 Name[nds]=GroupWise
