--- a/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
@@ -5,6 +5,7 @@ X-KDE-ServiceTypes=KABC/IMProtocol,KPluginInfo
 X-KDE-InstantMessagingKABCField=messaging/xmpp
 Comment=Jabber Protocol
 Comment[ca]=Protocol Jabber
+Comment[ca@valencia]=Protocol Jabber
 Comment[en_GB]=Jabber Protocol
 Comment[nb]=Jabber-protokoll
 Comment[nds]=Jabber-Protokoll
@@ -17,6 +18,7 @@ Comment[uk]=Протокол Jabber
 Comment[x-test]=xxJabber Protocolxx
 Name=Jabber
 Name[ca]=Jabber
+Name[ca@valencia]=Jabber
 Name[en_GB]=Jabber
 Name[nb]=Jabber
 Name[nds]=Jabber
