--- a/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
@@ -5,6 +5,7 @@ X-KDE-ServiceTypes=KABC/IMProtocol,KPluginInfo
 X-KDE-InstantMessagingKABCField=messaging/meanwhile
 Comment=Meanwhile Protocol
 Comment[ca]=Protocol Meanwhile
+Comment[ca@valencia]=Protocol Meanwhile
 Comment[en_GB]=Meanwhile Protocol
 Comment[nb]=Meanwhile-protokoll
 Comment[nds]=Meanwhile-Protokoll
@@ -17,6 +18,7 @@ Comment[uk]=Протокол Meanwhile
 Comment[x-test]=xxMeanwhile Protocolxx
 Name=Meanwhile
 Name[ca]=Meanwhile
+Name[ca@valencia]=Meanwhile
 Name[en_GB]=Meanwhile
 Name[nb]=Meanwhile
 Name[nds]=Meanwhile
