--- a/akonadi/contact/editor/im/protocols/msnprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/msnprotocol.desktop
@@ -5,6 +5,7 @@ X-KDE-ServiceTypes=KABC/IMProtocol,KPluginInfo
 X-KDE-InstantMessagingKABCField=messaging/msn
 Comment=MSN Messenger
 Comment[ca]=MSN Messenger
+Comment[ca@valencia]=MSN Messenger
 Comment[en_GB]=MSN Messenger
 Comment[nb]=MSN Messenger
 Comment[nds]=MSN-Kortnarichtenmaker
@@ -16,6 +17,7 @@ Comment[uk]=MSN Messenger
 Comment[x-test]=xxMSN Messengerxx
 Name=MSN Messenger
 Name[ca]=MSN Messenger
+Name[ca@valencia]=MSN Messenger
 Name[en_GB]=MSN Messenger
 Name[nb]=MSN Messenger
 Name[nds]=MSN-Kortnarichtenmaker
