--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -5,6 +5,7 @@ X-KDE-ServiceTypes=KABC/IMProtocol,KPluginInfo
 X-KDE-InstantMessagingKABCField=messaging/skype
 Comment=Skype Internet Telephony
 Comment[ca]=Telefonia d'Internet Skype
+Comment[ca@valencia]=Telefonia d'Internet Skype
 Comment[en_GB]=Skype Internet Telephony
 Comment[nb]=Skype IP-telefoni
 Comment[nds]=Internet-Telefoneren mit Skype
@@ -16,6 +17,7 @@ Comment[uk]=Інтернет-телефонія Skype
 Comment[x-test]=xxSkype Internet Telephonyxx
 Name=Skype
 Name[ca]=Skype
+Name[ca@valencia]=Skype
 Name[en_GB]=Skype
 Name[nb]=Skype
 Name[nds]=Skype
