--- a/akonadi/contact/editor/im/protocols/smsprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/smsprotocol.desktop
@@ -5,6 +5,7 @@ X-KDE-ServiceTypes=KABC/IMProtocol,KPluginInfo
 X-KDE-InstantMessagingKABCField=messaging/sms
 Comment=SMS Protocol
 Comment[ca]=Protocol SMS
+Comment[ca@valencia]=Protocol SMS
 Comment[en_GB]=SMS Protocol
 Comment[nb]=SMS Protokoll
 Comment[nds]=SMS-Protokoll
@@ -17,6 +18,7 @@ Comment[uk]=Протокол SMS
 Comment[x-test]=xxSMS Protocolxx
 Name=SMS
 Name[ca]=SMS
+Name[ca@valencia]=SMS
 Name[en_GB]=SMS
 Name[nb]=SMS
 Name[nds]=SMS
