--- a/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
@@ -5,6 +5,7 @@ X-KDE-ServiceTypes=KABC/IMProtocol,KPluginInfo
 X-KDE-InstantMessagingKABCField=messaging/yahoo
 Comment=Yahoo Protocol
 Comment[ca]=Protocol Yahoo
+Comment[ca@valencia]=Protocol Yahoo
 Comment[en_GB]=Yahoo Protocol
 Comment[nb]=Yahoo-protokoll
 Comment[nds]=Yahoo-Protokoll
@@ -17,6 +18,7 @@ Comment[uk]=Протокол Yahoo
 Comment[x-test]=xxYahoo Protocolxx
 Name=Yahoo
 Name[ca]=Yahoo
+Name[ca@valencia]=Yahoo
 Name[en_GB]=Yahoo
 Name[nb]=Yahoo
 Name[nds]=Yahoo
