--- a/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
+++ b/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
@@ -4,6 +4,7 @@ X-KDE-ServiceType=KABC/IMProtocol
 X-KDE-KAddressBook-CEWVersion=1
 Name=KAddressbook Instant Messaging Protocol
 Name[ca]=Protocol de missatgeria instantània del KAddressbook
+Name[ca@valencia]=Protocol de missatgeria instantània del KAddressbook
 Name[en_GB]=KAddressbook Instant Messaging Protocol
 Name[nb]=KAdressbook lynmeldingsprotokoll
 Name[nds]=KAddressbook-Kortnarichten-Protokoll
