--- a/akonadi/contact/editor/im/protocols/icqprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/icqprotocol.desktop
@@ -5,6 +5,7 @@ X-KDE-ServiceTypes=KABC/IMProtocol,KPluginInfo
 X-KDE-InstantMessagingKABCField=messaging/icq
 Comment=ICQ Protocol
 Comment[ca]=Protocol ICQ
+Comment[ca@valencia]=Protocol ICQ
 Comment[en_GB]=ICQ Protocol
 Comment[nb]=ICQ-protokoll
 Comment[nds]=ICQ-Protokoll
@@ -17,6 +18,7 @@ Comment[uk]=Протокол ICQ
 Comment[x-test]=xxICQ Protocolxx
 Name=ICQ
 Name[ca]=ICQ
+Name[ca@valencia]=ICQ
 Name[en_GB]=ICQ
 Name[nb]=ICQ
 Name[nds]=ICQ
