--- a/akonadi/contact/editor/im/protocols/ircprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/ircprotocol.desktop
@@ -5,6 +5,7 @@ X-KDE-ServiceTypes=KABC/IMProtocol,KPluginInfo
 X-KDE-InstantMessagingKABCField=messaging/irc
 Comment=Internet Relay Chat
 Comment[ca]=Internet Relay Chat
+Comment[ca@valencia]=Internet Relay Chat
 Comment[en_GB]=Internet Relay Chat
 Comment[nb]=Internet Relay Chat
 Comment[nds]=Klöönsnack (Internet Relay Chat)
@@ -16,6 +17,7 @@ Comment[uk]=Internet Relay Chat
 Comment[x-test]=xxInternet Relay Chatxx
 Name=IRC
 Name[ca]=IRC
+Name[ca@valencia]=IRC
 Name[en_GB]=IRC
 Name[nb]=IRC
 Name[nds]=IRC
