--- a/kldap/kcmldap.desktop
+++ b/kldap/kcmldap.desktop
@@ -13,6 +13,8 @@ Name=LDAP Server Settings
 Name[ca]=Arranjament del servidor LDAP
 Name[ca@valencia]=Arranjament del servidor LDAP
 Name[en_GB]=LDAP Server Settings
+Name[nb]=LDAP tjenerinnstillinger
+Name[nn]=Innstillingar for LDAP-tenar
 Name[pt]=Configuração do Servidor de LDAP
 Name[pt_BR]=Configurações do servidor LDAP
 Name[sv]=LDAP-serverinställningar
@@ -22,6 +24,8 @@ Comment=Configure the available LDAP servers
 Comment[ca]=Configura els servidors LDAP disponibles
 Comment[ca@valencia]=Configura els servidors LDAP disponibles
 Comment[en_GB]=Configure the available LDAP servers
+Comment[nb]=Sett opp de tilgjengelige LDAP-tjenerne
+Comment[nn]=Set opp dei tilgjengelege LDAP-tenarane
 Comment[pt]=Configurar os servidores de LDAP disponíveis
 Comment[pt_BR]=Configura os servidores LDAP disponíveis
 Comment[sv]=Anpassa tillgängliga LDAP-servrar
