SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.4/kdepimlibs/; revision=1110148

--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -20,6 +20,7 @@ Name[es]=Acciones de contactos
 Name[et]=Kontaktitoimingud
 Name[fi]=Yhteystietotoiminnot
 Name[fr]=Actions sur les contacts
+Name[ga]=Gníomhartha Teagmhála
 Name[gl]=Accións de contacto
 Name[hu]=Névjegyműveletek
 Name[it]=Azioni per i contatti
@@ -55,6 +56,7 @@ Comment[es]=Configurar las acciones de contactos
 Comment[et]=Kontaktitoimingute seadistamine
 Comment[fi]=Yhteystietotoimintojen asetukset
 Comment[fr]=Configurer les actions sur les contacts
+Comment[ga]=Cumraigh na Gníomhartha Teagmhála
 Comment[gl]=Configurar as accións de contacto
 Comment[hu]=A névjegyműveletek beállítása
 Comment[it]=Configua le azioni per i contatti
