--- a/akonadi/CMakeLists.txt
+++ b/akonadi/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(akonadi)
+project(akonadi-kde)
 
 add_definitions( -DKDE_DEFAULT_DEBUG_AREA=5250 )
 
@@ -175,23 +175,22 @@ kde4_add_ui_files( akonadikde_LIB_SRC
   erroroverlay.ui
 )
 
-kde4_add_library( akonadi SHARED ${akonadikde_LIB_SRC} )
+kde4_add_library( akonadi-kde SHARED ${akonadikde_LIB_SRC} )
 
 macro_ensure_version( "4.2.0" ${KDE_VERSION} KDE_IS_AT_LEAST_42 )
 
-target_link_libraries( akonadi ${KDE4_SOLID_LIBS} ${QT_QTNETWORK_LIBRARY} ${QT_QTDBUS_LIBRARY} ${QT_QTSQL_LIBRARY} ${KDE4_KDEUI_LIBS} ${KDE4_KIO_LIBS} ${AKONADI_COMMON_LIBRARIES} )
+target_link_libraries( akonadi-kde ${KDE4_SOLID_LIBS} ${QT_QTNETWORK_LIBRARY} ${QT_QTDBUS_LIBRARY} ${QT_QTSQL_LIBRARY} ${KDE4_KDEUI_LIBS} ${KDE4_KIO_LIBS} ${AKONADI_COMMON_LIBRARIES} )
 set( AKONADI_KDE_DEPS ${KDE4_KDEUI_LIBS} ${QT_QTDBUS_LIBRARY} ${QT_QTCORE_LIBRARY} )
 
 if(KDE_IS_AT_LEAST_42)
-target_link_libraries( akonadi LINK_INTERFACE_LIBRARIES ${AKONADI_KDE_DEPS})
+target_link_libraries( akonadi-kde LINK_INTERFACE_LIBRARIES ${AKONADI_KDE_DEPS})
 else(KDE_IS_AT_LEAST_42)
-target_link_libraries( akonadi ${AKONADI_KDE_DEPS})
+target_link_libraries( akonadi-kde ${AKONADI_KDE_DEPS})
 endif(KDE_IS_AT_LEAST_42)
 
 
-set_target_properties( akonadi PROPERTIES VERSION ${GENERIC_LIB_VERSION} SOVERSION ${GENERIC_LIB_SOVERSION} )
-set_target_properties( akonadi PROPERTIES OUTPUT_NAME akonadi-kde)
-install( TARGETS akonadi EXPORT kdepimlibsLibraryTargets  ${INSTALL_TARGETS_DEFAULT_ARGS} )
+set_target_properties( akonadi-kde PROPERTIES VERSION ${GENERIC_LIB_VERSION} SOVERSION ${GENERIC_LIB_SOVERSION} )
+install( TARGETS akonadi-kde EXPORT kdepimlibsLibraryTargets  ${INSTALL_TARGETS_DEFAULT_ARGS} )
 
 ########### install files ###############
 
