SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1113885

--- a/akonadi/contact/editor/im/protocols/aimprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/aimprotocol.desktop
@@ -6,6 +6,7 @@ X-KDE-InstantMessagingKABCField=messaging/aim
 Comment=AIM Protocol
 Comment[ca]=Protocol AIM
 Comment[ca@valencia]=Protocol AIM
+Comment[de]=AIM-Protokoll
 Comment[en_GB]=AIM Protocol
 Comment[nb]=AIM-protokoll
 Comment[nds]=AIM-Protokoll
@@ -19,6 +20,7 @@ Comment[x-test]=xxAIM Protocolxx
 Name=AIM
 Name[ca]=AIM
 Name[ca@valencia]=AIM
+Name[de]=AIM
 Name[en_GB]=AIM
 Name[nb]=AIM
 Name[nds]=AIM
