--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -6,6 +6,7 @@ X-KDE-InstantMessagingKABCField=messaging/groupwise
 Comment=Novell GroupWise Messenger
 Comment[ca]=Novell GroupWise Messenger
 Comment[ca@valencia]=Novell GroupWise Messenger
+Comment[de]=Novell-GroupWise-Nachrichtendienst
 Comment[en_GB]=Novell GroupWise Messenger
 Comment[nb]=Novell GroupWise meldingsprogram
 Comment[nds]=Novell-GroupWise-Kortnarichtenmaker
@@ -19,6 +20,7 @@ Comment[x-test]=xxNovell GroupWise Messengerxx
 Name=GroupWise
 Name[ca]=GroupWise
 Name[ca@valencia]=GroupWise
+Name[de]=GroupWise
 Name[en_GB]=GroupWise
 Name[nb]=GroupWise
 Name[nds]=GroupWise
