--- a/akonadi/contact/editor/im/protocols/icqprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/icqprotocol.desktop
@@ -6,6 +6,7 @@ X-KDE-InstantMessagingKABCField=messaging/icq
 Comment=ICQ Protocol
 Comment[ca]=Protocol ICQ
 Comment[ca@valencia]=Protocol ICQ
+Comment[de]=ICQ-Protokoll
 Comment[en_GB]=ICQ Protocol
 Comment[nb]=ICQ-protokoll
 Comment[nds]=ICQ-Protokoll
@@ -19,6 +20,7 @@ Comment[x-test]=xxICQ Protocolxx
 Name=ICQ
 Name[ca]=ICQ
 Name[ca@valencia]=ICQ
+Name[de]=ICQ
 Name[en_GB]=ICQ
 Name[nb]=ICQ
 Name[nds]=ICQ
