--- a/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
@@ -6,6 +6,7 @@ X-KDE-InstantMessagingKABCField=messaging/xmpp
 Comment=Jabber Protocol
 Comment[ca]=Protocol Jabber
 Comment[ca@valencia]=Protocol Jabber
+Comment[de]=Jabber-Protokoll
 Comment[en_GB]=Jabber Protocol
 Comment[nb]=Jabber-protokoll
 Comment[nds]=Jabber-Protokoll
@@ -19,6 +20,7 @@ Comment[x-test]=xxJabber Protocolxx
 Name=Jabber
 Name[ca]=Jabber
 Name[ca@valencia]=Jabber
+Name[de]=Jabber
 Name[en_GB]=Jabber
 Name[nb]=Jabber
 Name[nds]=Jabber
