--- a/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
@@ -6,6 +6,7 @@ X-KDE-InstantMessagingKABCField=messaging/meanwhile
 Comment=Meanwhile Protocol
 Comment[ca]=Protocol Meanwhile
 Comment[ca@valencia]=Protocol Meanwhile
+Comment[de]=Meanwhile-Protokoll
 Comment[en_GB]=Meanwhile Protocol
 Comment[nb]=Meanwhile-protokoll
 Comment[nds]=Meanwhile-Protokoll
@@ -19,6 +20,7 @@ Comment[x-test]=xxMeanwhile Protocolxx
 Name=Meanwhile
 Name[ca]=Meanwhile
 Name[ca@valencia]=Meanwhile
+Name[de]=Meanwhile
 Name[en_GB]=Meanwhile
 Name[nb]=Meanwhile
 Name[nds]=Meanwhile
