--- a/akonadi/contact/editor/im/protocols/msnprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/msnprotocol.desktop
@@ -6,6 +6,7 @@ X-KDE-InstantMessagingKABCField=messaging/msn
 Comment=MSN Messenger
 Comment[ca]=MSN Messenger
 Comment[ca@valencia]=MSN Messenger
+Comment[de]=MSN-Nachrichtendienst
 Comment[en_GB]=MSN Messenger
 Comment[nb]=MSN Messenger
 Comment[nds]=MSN-Kortnarichtenmaker
@@ -18,6 +19,7 @@ Comment[x-test]=xxMSN Messengerxx
 Name=MSN Messenger
 Name[ca]=MSN Messenger
 Name[ca@valencia]=MSN Messenger
+Name[de]=MSN Messenger
 Name[en_GB]=MSN Messenger
 Name[nb]=MSN Messenger
 Name[nds]=MSN-Kortnarichtenmaker
