--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -6,6 +6,7 @@ X-KDE-InstantMessagingKABCField=messaging/skype
 Comment=Skype Internet Telephony
 Comment[ca]=Telefonia d'Internet Skype
 Comment[ca@valencia]=Telefonia d'Internet Skype
+Comment[de]=Skype-Internettelefonie
 Comment[en_GB]=Skype Internet Telephony
 Comment[nb]=Skype IP-telefoni
 Comment[nds]=Internet-Telefoneren mit Skype
@@ -18,6 +19,7 @@ Comment[x-test]=xxSkype Internet Telephonyxx
 Name=Skype
 Name[ca]=Skype
 Name[ca@valencia]=Skype
+Name[de]=Skype
 Name[en_GB]=Skype
 Name[nb]=Skype
 Name[nds]=Skype
