--- a/akonadi/contact/editor/im/protocols/smsprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/smsprotocol.desktop
@@ -6,6 +6,7 @@ X-KDE-InstantMessagingKABCField=messaging/sms
 Comment=SMS Protocol
 Comment[ca]=Protocol SMS
 Comment[ca@valencia]=Protocol SMS
+Comment[de]=SMS-Protokoll
 Comment[en_GB]=SMS Protocol
 Comment[nb]=SMS Protokoll
 Comment[nds]=SMS-Protokoll
@@ -19,6 +20,7 @@ Comment[x-test]=xxSMS Protocolxx
 Name=SMS
 Name[ca]=SMS
 Name[ca@valencia]=SMS
+Name[de]=SMS
 Name[en_GB]=SMS
 Name[nb]=SMS
 Name[nds]=SMS
