--- a/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
@@ -6,6 +6,7 @@ X-KDE-InstantMessagingKABCField=messaging/yahoo
 Comment=Yahoo Protocol
 Comment[ca]=Protocol Yahoo
 Comment[ca@valencia]=Protocol Yahoo
+Comment[de]=Yahoo-Protokoll
 Comment[en_GB]=Yahoo Protocol
 Comment[nb]=Yahoo-protokoll
 Comment[nds]=Yahoo-Protokoll
@@ -19,6 +20,7 @@ Comment[x-test]=xxYahoo Protocolxx
 Name=Yahoo
 Name[ca]=Yahoo
 Name[ca@valencia]=Yahoo
+Name[de]=Yahoo
 Name[en_GB]=Yahoo
 Name[nb]=Yahoo
 Name[nds]=Yahoo
