--- a/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
@@ -6,6 +6,7 @@ X-KDE-InstantMessagingKABCField=messaging/gadu
 Comment=Gadu-Gadu Protocol
 Comment[ca]=Protocol Gadu-Gadu
 Comment[ca@valencia]=Protocol Gadu-Gadu
+Comment[de]=Gadu-Gadu-Protokoll
 Comment[en_GB]=Gadu-Gadu Protocol
 Comment[nb]=Gadu-Gadu-protokoll
 Comment[nds]=Gadu-Gadu-Protokoll
@@ -19,6 +20,7 @@ Comment[x-test]=xxGadu-Gadu Protocolxx
 Name=Gadu-Gadu
 Name[ca]=Gadu-Gadu
 Name[ca@valencia]=Gadu-Gadu
+Name[de]=Gadu-Gadu
 Name[en_GB]=Gadu-Gadu
 Name[nb]=Gadu-Gadu
 Name[nds]=Gadu-Gadu
