--- a/akonadi/contact/editor/im/protocols/ircprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/ircprotocol.desktop
@@ -6,6 +6,7 @@ X-KDE-InstantMessagingKABCField=messaging/irc
 Comment=Internet Relay Chat
 Comment[ca]=Internet Relay Chat
 Comment[ca@valencia]=Internet Relay Chat
+Comment[de]=Internet Relay Chat
 Comment[en_GB]=Internet Relay Chat
 Comment[nb]=Internet Relay Chat
 Comment[nds]=Klöönsnack (Internet Relay Chat)
@@ -18,6 +19,7 @@ Comment[x-test]=xxInternet Relay Chatxx
 Name=IRC
 Name[ca]=IRC
 Name[ca@valencia]=IRC
+Name[de]=IRC
 Name[en_GB]=IRC
 Name[nb]=IRC
 Name[nds]=IRC
