--- a/kldap/kcmldap.desktop
+++ b/kldap/kcmldap.desktop
@@ -12,6 +12,7 @@ X-KDE-Weight=200
 Name=LDAP Server Settings
 Name[ca]=Arranjament del servidor LDAP
 Name[ca@valencia]=Arranjament del servidor LDAP
+Name[de]=LDAP-Servereinstellungen
 Name[en_GB]=LDAP Server Settings
 Name[nb]=LDAP tjenerinnstillinger
 Name[nn]=Innstillingar for LDAP-tenar
@@ -23,6 +24,7 @@ Name[x-test]=xxLDAP Server Settingsxx
 Comment=Configure the available LDAP servers
 Comment[ca]=Configura els servidors LDAP disponibles
 Comment[ca@valencia]=Configura els servidors LDAP disponibles
+Comment[de]=Die verfügbaren LDAP-Server einrichten
 Comment[en_GB]=Configure the available LDAP servers
 Comment[nb]=Sett opp de tilgjengelige LDAP-tjenerne
 Comment[nn]=Set opp dei tilgjengelege LDAP-tenarane
