Add a search modify job, to allow updates to existing search folders. Up the required protocol version, for search_modify.
svn path=/trunk/KDE/kdepimlibs/; revision=1114226

--- a/akonadi/CMakeLists.txt
+++ b/akonadi/CMakeLists.txt
@@ -130,6 +130,7 @@ set( akonadikde_LIB_SRC
   resourceselectjob.cpp
   resourcesynchronizationjob.cpp
   searchcreatejob.cpp
+  searchmodifyjob.cpp
   selectionproxymodel.cpp
   selftestdialog.cpp
   session.cpp
@@ -271,6 +272,7 @@ install( FILES
   resourcebase.h
   resourcesynchronizationjob.h
   searchcreatejob.h
+  searchmodifyjob.h
   selectionproxymodel.h
   session.h
   servermanager.h
