Add first (unfinished) version of an email address selection widget
svn path=/trunk/KDE/kdepimlibs/; revision=1119176

--- a/akonadi/contact/CMakeLists.txt
+++ b/akonadi/contact/CMakeLists.txt
@@ -77,6 +77,8 @@ set(akonadicontact_LIB_SRC
   contactviewerdialog.cpp
   customfields.cpp
   customfieldmanager.cpp
+  emailaddressselectionview.cpp
+  leafextensionproxymodel.cpp
   recentcontactscollections.cpp
   recentcontactscollectionrequestjob.cpp
   standardcontactformatter.cpp
