SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.4/kdepimlibs/; revision=1119399

--- a/kresources/kresources.desktop
+++ b/kresources/kresources.desktop
@@ -86,7 +86,7 @@ Comment[pl]=Konfiguruj zasoby KDE
 Comment[pt]=Configurar os Recursos do KDE
 Comment[pt_BR]=Configurar as fontes de dados do KDE
 Comment[ro]=Configurare resurse KDE
-Comment[ru]=Настроить источники данных KDE
+Comment[ru]=Настройка источников данных KDE
 Comment[se]=Heivet KDE-resurssaid
 Comment[sk]=Konfiguruj KDE zdroje
 Comment[sl]=Nastavi vire KDE
