SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1119458

--- a/akonadi/contact/editor/im/protocols/aimprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/aimprotocol.desktop
@@ -13,6 +13,7 @@ Comment[nds]=AIM-Protokoll
 Comment[nn]=AIM-protokoll
 Comment[pt]=Protocolo AIM
 Comment[pt_BR]=Protocolo do AIM
+Comment[ru]=Протокол AIM
 Comment[sv]=AIM-protokoll
 Comment[th]=โพรโทคอล AIM
 Comment[uk]=Протокол AIM
@@ -27,6 +28,7 @@ Name[nds]=AIM
 Name[nn]=AIM
 Name[pt]=AIM
 Name[pt_BR]=AIM
+Name[ru]=AIM
 Name[sv]=AIM
 Name[th]=AIM
 Name[uk]=AIM
