--- a/akonadi/contact/editor/im/protocols/icqprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/icqprotocol.desktop
@@ -13,6 +13,7 @@ Comment[nds]=ICQ-Protokoll
 Comment[nn]=ICQ-protokoll
 Comment[pt]=Protocolo ICQ
 Comment[pt_BR]=Protocolo do ICQ
+Comment[ru]=Протокол ICQ
 Comment[sv]=ICQ-protokoll
 Comment[th]=โพรโทคอล ICQ
 Comment[uk]=Протокол ICQ
@@ -27,6 +28,7 @@ Name[nds]=ICQ
 Name[nn]=ICQ
 Name[pt]=ICQ
 Name[pt_BR]=ICQ
+Name[ru]=ICQ
 Name[sv]=ICQ
 Name[th]=ICQ
 Name[uk]=ICQ
