--- a/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
@@ -13,6 +13,7 @@ Comment[nds]=Gadu-Gadu-Protokoll
 Comment[nn]=Gadu-Gadu-protokoll
 Comment[pt]=Protocolo Gadu-Gadu
 Comment[pt_BR]=Protocolo do Gadu-Gadu
+Comment[ru]=Протокол Gadu-Gadu
 Comment[sv]=Gadu-Gadu protokoll
 Comment[th]=โพรโทคอล Gadu-Gadu
 Comment[uk]=Протокол Gadu-Gadu
@@ -27,6 +28,7 @@ Name[nds]=Gadu-Gadu
 Name[nn]=Gadu-Gadu
 Name[pt]=Gadu-Gadu
 Name[pt_BR]=Gadu-Gadu
+Name[ru]=Gadu-Gadu
 Name[sv]=Gadu-Gadu
 Name[th]=Gadu-Gadu
 Name[uk]=Gadu-Gadu
