--- a/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
@@ -13,6 +13,7 @@ Comment[nds]=Jabber-Protokoll
 Comment[nn]=Jabber-protokoll
 Comment[pt]=Protocolo Jabber
 Comment[pt_BR]=Protocolo do Jabber
+Comment[ru]=Протокол Jabber
 Comment[sv]=Jabber-protokoll
 Comment[th]=โพรโทคอล Jabber
 Comment[uk]=Протокол Jabber
@@ -27,6 +28,7 @@ Name[nds]=Jabber
 Name[nn]=Jabber
 Name[pt]=Jabber
 Name[pt_BR]=Jabber
+Name[ru]=Jabber
 Name[sv]=Jabber
 Name[th]=Jabber
 Name[uk]=Jabber
