Add new dialog for selecting email addresses from Akonadi
svn path=/trunk/KDE/kdepimlibs/; revision=1120042

--- a/akonadi/contact/tests/CMakeLists.txt
+++ b/akonadi/contact/tests/CMakeLists.txt
@@ -18,3 +18,4 @@ target_link_libraries(contactmetadataattributetest ${QT_QTTEST_LIBRARY} ${QT_QTC
 ########### next target ###############
 
 add_akonadi_contact_demo(emailaddressselectionviewtest.cpp)
+add_akonadi_contact_demo(emailaddressselectiondialogtest.cpp)
