Make EmailAddressSelection(View|Dialog) header public
svn path=/trunk/KDE/kdepimlibs/; revision=1120058

--- a/akonadi/contact/CMakeLists.txt
+++ b/akonadi/contact/CMakeLists.txt
@@ -137,6 +137,8 @@ install( FILES
   contactstreemodel.h
   contactviewer.h
   contactviewerdialog.h
+  emailaddressselectiondialog.h
+  emailaddressselectionview.h
   recentcontactscollectionrequestjob.h
   standardcontactformatter.h
   DESTINATION ${INCLUDE_INSTALL_DIR}/akonadi/contact COMPONENT Devel
