Add convenience method that returns the quoted form of a selected email address
svn path=/trunk/KDE/kdepimlibs/; revision=1120141

--- a/akonadi/contact/CMakeLists.txt
+++ b/akonadi/contact/CMakeLists.txt
@@ -97,6 +97,7 @@ kde4_add_library(akonadi-contact SHARED ${akonadicontact_LIB_SRC})
 target_link_libraries(akonadi-contact akonadi-kde
                                       kabc
                                       kcal
+                                      kmime
                                       kpimutils
                                       ${KDE4_KDEUI_LIBS}
                                       ${KDE4_KIO_LIBS}
@@ -106,6 +107,7 @@ target_link_libraries(akonadi-contact LINK_INTERFACE_LIBRARIES
                                       akonadi-kde
                                       kabc
                                       kcal
+                                      kmime
                                       kpimutils
                                       ${KDE4_KDEUI_LIBS}
                                       ${KDE4_KIO_LIBS}
