Don't enable XML output for the tests by default.
If you want XML output, you need to enable the KDEPIMLIBS_TESTS_XML
option in CMake. This is for example useful when submitting results to
CDash.

Having XML by default is confusing, took me a while to figure out why
my qDebugs weren't showing up in the test log.

CCMAIL: kde-pim@kde.org

svn path=/trunk/KDE/kdepimlibs/; revision=1120189

--- a/akonadi/tests/CMakeLists.txt
+++ b/akonadi/tests/CMakeLists.txt
@@ -7,6 +7,8 @@ set( EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR} )
 set( TEST_RESULT_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR}/testresults )
 file(MAKE_DIRECTORY ${TEST_RESULT_OUTPUT_PATH})
 
+option(KDEPIMLIBS_TESTS_XML "Use XML files for the test results, instead of plain text." FALSE)
+
 set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${KDE4_ENABLE_EXCEPTIONS}" )
 
 include_directories(
@@ -69,24 +71,32 @@ macro(add_akonadi_isolated_test _source)
     set(_testrunner ${_testrunner}.shell)
   endif (UNIX)
 
+  if ( KDEPIMLIBS_TESTS_XML )
+    set( MYSQL_EXTRA_OPTIONS_DB -xml -o ${TEST_RESULT_OUTPUT_PATH}/mysql-db-${_name}.xml )
+    set( MYSQL_EXTRA_OPTIONS_FS -xml -o ${TEST_RESULT_OUTPUT_PATH}/mysql-fs-${_name}.xml )
+    set( POSTGRESL_EXTRA_OPTIONS_DB -xml -o ${TEST_RESULT_OUTPUT_PATH}/postgresql-db-${_name}.xml )
+    set( POSTGRESL_EXTRA_OPTIONS_FS -xml -o ${TEST_RESULT_OUTPUT_PATH}/postgresql-fs-${_name}.xml )
+    set( SQLITE_EXTRA_OPTIONS -xml -o ${TEST_RESULT_OUTPUT_PATH}/sqlite-${_name}.xml )
+  endif( KDEPIMLIBS_TESTS_XML )
+
   find_program( MYSQLD_EXECUTABLE mysqld /usr/sbin /usr/local/sbin /usr/libexec /usr/local/libexec /opt/mysql/libexec /usr/mysql/bin )
   if ( MYSQLD_EXECUTABLE )
     add_test( akonadi-mysql-db-${_name} ${_testrunner} -c ${CMAKE_CURRENT_SOURCE_DIR}/unittestenv/config-mysql-db.xml ${_executable} 
-      -xml -o ${TEST_RESULT_OUTPUT_PATH}/mysql-db-${_name}.xml  )
+      ${MYSQL_EXTRA_OPTIONS_DB} )
     add_test( akonadi-mysql-fs-${_name} ${_testrunner} -c ${CMAKE_CURRENT_SOURCE_DIR}/unittestenv/config-mysql-fs.xml ${_executable} 
-      -xml -o ${TEST_RESULT_OUTPUT_PATH}/mysql-fs-${_name}.xml )
+      ${MYSQL_EXTRA_OPTIONS_FS} )
   endif ( MYSQLD_EXECUTABLE )
 
   find_program( POSTGRES_EXECUTABLE postgres )
   if ( POSTGRES_EXECUTABLE )
     add_test( akonadi-postgresql-db-${_name} ${_testrunner} -c ${CMAKE_CURRENT_SOURCE_DIR}/unittestenv/config-postgresql-db.xml ${_executable}
-       -xml -o ${TEST_RESULT_OUTPUT_PATH}/postgresql-db-${_name}.xml  )
+      ${POSTGRESL_EXTRA_OPTIONS_DB} )
     add_test( akonadi-postgresql-fs-${_name} ${_testrunner} -c ${CMAKE_CURRENT_SOURCE_DIR}/unittestenv/config-postgresql-fs.xml ${_executable} 
-      -xml -o ${TEST_RESULT_OUTPUT_PATH}/postgresql-fs-${_name}.xml )
+      ${POSTGRESL_EXTRA_OPTIONS_FS} )
   endif ( POSTGRES_EXECUTABLE )
 
   add_test( akonadi-sqlite-${_name} ${_testrunner} -c ${CMAKE_CURRENT_SOURCE_DIR}/unittestenv/config-sqlite-db.xml ${_executable} 
-    -xml -o ${TEST_RESULT_OUTPUT_PATH}/sqlite-${_name}.xml)
+    ${SQLITE_EXTRA_OPTIONS} )
 endmacro(add_akonadi_isolated_test)
 
 
