--- a/kcal/CMakeLists.txt
+++ b/kcal/CMakeLists.txt
@@ -3,6 +3,8 @@ project(kcal)
 set(LIBICAL_MIN_VERSION "0.42")
 find_package(Libical)
 macro_log_feature(LIBICAL_FOUND "libical" "Reference implementation of the iCalendar data type and serialization format" "http://sourceforge.net/projects/freeassociation" TRUE "${LIBICAL_MIN_VERSION}" "Required for the critical PIM kcal library.")
+add_definitions(-DLIBICAL_MAJOR_VERSION=${LIBICAL_MAJOR_VERSION}
+                -DLIBICAL_MINOR_VERSION=${LIBICAL_MINOR_VERSION})
 
 add_definitions(-DKDE_DEFAULT_DEBUG_AREA=5800)
 
