SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1125383

--- a/akonadi/contact/editor/im/protocols/aimprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/aimprotocol.desktop
@@ -8,6 +8,7 @@ Comment[ca]=Protocol AIM
 Comment[ca@valencia]=Protocol AIM
 Comment[de]=AIM-Protokoll
 Comment[en_GB]=AIM Protocol
+Comment[es]=Protocolo AIM
 Comment[nb]=AIM-protokoll
 Comment[nds]=AIM-Protokoll
 Comment[nn]=AIM-protokoll
@@ -23,6 +24,7 @@ Name[ca]=AIM
 Name[ca@valencia]=AIM
 Name[de]=AIM
 Name[en_GB]=AIM
+Name[es]=AIM
 Name[nb]=AIM
 Name[nds]=AIM
 Name[nn]=AIM
