--- a/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
@@ -8,6 +8,7 @@ Comment[ca]=Protocol Gadu-Gadu
 Comment[ca@valencia]=Protocol Gadu-Gadu
 Comment[de]=Gadu-Gadu-Protokoll
 Comment[en_GB]=Gadu-Gadu Protocol
+Comment[es]=Protocolo Gadu-Gadu
 Comment[nb]=Gadu-Gadu-protokoll
 Comment[nds]=Gadu-Gadu-Protokoll
 Comment[nn]=Gadu-Gadu-protokoll
@@ -23,6 +24,7 @@ Name[ca]=Gadu-Gadu
 Name[ca@valencia]=Gadu-Gadu
 Name[de]=Gadu-Gadu
 Name[en_GB]=Gadu-Gadu
+Name[es]=Gadu-Gadu
 Name[nb]=Gadu-Gadu
 Name[nds]=Gadu-Gadu
 Name[nn]=Gadu-Gadu
