--- a/akonadi/contact/editor/im/protocols/icqprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/icqprotocol.desktop
@@ -8,6 +8,7 @@ Comment[ca]=Protocol ICQ
 Comment[ca@valencia]=Protocol ICQ
 Comment[de]=ICQ-Protokoll
 Comment[en_GB]=ICQ Protocol
+Comment[es]=Protocolo ICQ
 Comment[nb]=ICQ-protokoll
 Comment[nds]=ICQ-Protokoll
 Comment[nn]=ICQ-protokoll
@@ -23,6 +24,7 @@ Name[ca]=ICQ
 Name[ca@valencia]=ICQ
 Name[de]=ICQ
 Name[en_GB]=ICQ
+Name[es]=ICQ
 Name[nb]=ICQ
 Name[nds]=ICQ
 Name[nn]=ICQ
