--- a/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
@@ -8,6 +8,7 @@ Comment[ca]=Protocol Jabber
 Comment[ca@valencia]=Protocol Jabber
 Comment[de]=Jabber-Protokoll
 Comment[en_GB]=Jabber Protocol
+Comment[es]=Protocolo Jabber
 Comment[nb]=Jabber-protokoll
 Comment[nds]=Jabber-Protokoll
 Comment[nn]=Jabber-protokoll
@@ -23,6 +24,7 @@ Name[ca]=Jabber
 Name[ca@valencia]=Jabber
 Name[de]=Jabber
 Name[en_GB]=Jabber
+Name[es]=Jabber
 Name[nb]=Jabber
 Name[nds]=Jabber
 Name[nn]=Jabber
