--- a/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
@@ -8,6 +8,7 @@ Comment[ca]=Protocol Meanwhile
 Comment[ca@valencia]=Protocol Meanwhile
 Comment[de]=Meanwhile-Protokoll
 Comment[en_GB]=Meanwhile Protocol
+Comment[es]=Protocolo Meanwhile
 Comment[nb]=Meanwhile-protokoll
 Comment[nds]=Meanwhile-Protokoll
 Comment[nn]=Meanwhile-protokoll
@@ -22,6 +23,7 @@ Name[ca]=Meanwhile
 Name[ca@valencia]=Meanwhile
 Name[de]=Meanwhile
 Name[en_GB]=Meanwhile
+Name[es]=Meanwhile
 Name[nb]=Meanwhile
 Name[nds]=Meanwhile
 Name[nn]=Meanwhile
