--- a/akonadi/contact/editor/im/protocols/msnprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/msnprotocol.desktop
@@ -8,6 +8,7 @@ Comment[ca]=MSN Messenger
 Comment[ca@valencia]=MSN Messenger
 Comment[de]=MSN-Nachrichtendienst
 Comment[en_GB]=MSN Messenger
+Comment[es]=MSN Messenger
 Comment[nb]=MSN Messenger
 Comment[nds]=MSN-Kortnarichtenmaker
 Comment[nn]=MSN Messenger
@@ -21,6 +22,7 @@ Name[ca]=MSN Messenger
 Name[ca@valencia]=MSN Messenger
 Name[de]=MSN Messenger
 Name[en_GB]=MSN Messenger
+Name[es]=MSN Messenger
 Name[nb]=MSN Messenger
 Name[nds]=MSN-Kortnarichtenmaker
 Name[nn]=MSN Messenger
