--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -8,6 +8,7 @@ Comment[ca]=Telefonia d'Internet Skype
 Comment[ca@valencia]=Telefonia d'Internet Skype
 Comment[de]=Skype-Internettelefonie
 Comment[en_GB]=Skype Internet Telephony
+Comment[es]=Telefonía por internet de Skype
 Comment[nb]=Skype IP-telefoni
 Comment[nds]=Internet-Telefoneren mit Skype
 Comment[nn]=Skype Internett-telefoni
@@ -21,6 +22,7 @@ Name[ca]=Skype
 Name[ca@valencia]=Skype
 Name[de]=Skype
 Name[en_GB]=Skype
+Name[es]=Skype
 Name[nb]=Skype
 Name[nds]=Skype
 Name[nn]=Skype
