--- a/akonadi/contact/editor/im/protocols/smsprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/smsprotocol.desktop
@@ -8,6 +8,7 @@ Comment[ca]=Protocol SMS
 Comment[ca@valencia]=Protocol SMS
 Comment[de]=SMS-Protokoll
 Comment[en_GB]=SMS Protocol
+Comment[es]=Protocolo SMS
 Comment[nb]=SMS Protokoll
 Comment[nds]=SMS-Protokoll
 Comment[nn]=SMS-protokoll
@@ -22,6 +23,7 @@ Name[ca]=SMS
 Name[ca@valencia]=SMS
 Name[de]=SMS
 Name[en_GB]=SMS
+Name[es]=SMS
 Name[nb]=SMS
 Name[nds]=SMS
 Name[nn]=SMS
