--- a/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
+++ b/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
@@ -6,6 +6,7 @@ Name=KAddressbook Instant Messaging Protocol
 Name[ca]=Protocol de missatgeria instantània del KAddressbook
 Name[ca@valencia]=Protocol de missatgeria instantània del KAddressbook
 Name[en_GB]=KAddressbook Instant Messaging Protocol
+Name[es]=Protocolo de mensajería instantánea de KAddressbook
 Name[nb]=KAdressbook lynmeldingsprotokoll
 Name[nds]=KAddressbook-Kortnarichten-Protokoll
 Name[nn]=Lynmeldingsprotokoll for KDE-adresseboka
