--- a/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
@@ -8,6 +8,7 @@ Comment[ca]=Protocol Yahoo
 Comment[ca@valencia]=Protocol Yahoo
 Comment[de]=Yahoo-Protokoll
 Comment[en_GB]=Yahoo Protocol
+Comment[es]=Protocolo Yahoo
 Comment[nb]=Yahoo-protokoll
 Comment[nds]=Yahoo-Protokoll
 Comment[nn]=Yahoo!-protokoll
@@ -22,6 +23,7 @@ Name[ca]=Yahoo
 Name[ca@valencia]=Yahoo
 Name[de]=Yahoo
 Name[en_GB]=Yahoo
+Name[es]=Yahoo
 Name[nb]=Yahoo
 Name[nds]=Yahoo
 Name[nn]=Yahoo
