--- a/kldap/kcmldap.desktop
+++ b/kldap/kcmldap.desktop
@@ -14,6 +14,7 @@ Name[ca]=Arranjament del servidor LDAP
 Name[ca@valencia]=Arranjament del servidor LDAP
 Name[de]=LDAP-Servereinstellungen
 Name[en_GB]=LDAP Server Settings
+Name[es]=Preferencias de servidor LDAP
 Name[nb]=LDAP tjenerinnstillinger
 Name[nn]=Innstillingar for LDAP-tenar
 Name[pt]=Configuração do Servidor de LDAP
@@ -26,6 +27,7 @@ Comment[ca]=Configura els servidors LDAP disponibles
 Comment[ca@valencia]=Configura els servidors LDAP disponibles
 Comment[de]=Die verfügbaren LDAP-Server einrichten
 Comment[en_GB]=Configure the available LDAP servers
+Comment[es]=Configurar los servidores disponibles de LDAP
 Comment[nb]=Sett opp de tilgjengelige LDAP-tjenerne
 Comment[nn]=Set opp dei tilgjengelege LDAP-tenarane
 Comment[pt]=Configurar os servidores de LDAP disponíveis
