Add the ability for the session to log what is going on with the connection. Note that the necessary logic was added to avoid login user credential.
svn path=/trunk/KDE/kdepimlibs/; revision=1126710

--- a/kimap/CMakeLists.txt
+++ b/kimap/CMakeLists.txt
@@ -22,6 +22,7 @@ set(kimap_LIB_SRCS
    rfccodecs.cpp
    selectjob.cpp
    session.cpp
+   sessionlogger.cpp
    sessionthread.cpp
    closejob.cpp
    expungejob.cpp
