Make the MockJob part of kimaptest.
svn path=/trunk/KDE/kdepimlibs/; revision=1127161

--- a/kimap/tests/kimaptest/CMakeLists.txt
+++ b/kimap/tests/kimaptest/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${KDE4_ENABLE_EXCEPTIONS}")
 
 set(kimaptest_LIB_SRCS
    fakeserver.cpp
+   mockjob.cpp
    ../../imapstreamparser.cpp
 )
 
@@ -17,6 +18,7 @@ install(TARGETS kimaptest ${INSTALL_TARGETS_DEFAULT_ARGS})
 
 install(FILES
   fakeserver.h
+  mockjob.h
   DESTINATION ${INCLUDE_INSTALL_DIR}/kimaptest COMPONENT Devel)
 
 endif(KDE4_BUILD_TESTS)
