--- a/kresources/kresources.desktop
+++ b/kresources/kresources.desktop
@@ -6,6 +6,7 @@ X-KDE-ServiceTypes=KCModule
 X-KDE-Library=kcm_kresources
 X-KDE-FactoryName=kcm_kresources
 X-KDE-System-Settings-Parent-Category=advanced-user-settings
+X-KDE-System-Settings-Parent-Category-V2=personal-information
 X-DocPath=kcontrol/kresources/index.html
 
 Name=KDE Resources
