SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1131059

--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -22,6 +22,7 @@ Name[ca]=GroupWise
 Name[ca@valencia]=GroupWise
 Name[de]=GroupWise
 Name[en_GB]=GroupWise
+Name[km]=GroupWise​
 Name[nb]=GroupWise
 Name[nds]=GroupWise
 Name[nn]=GroupWise
