--- a/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
@@ -25,6 +25,7 @@ Name[ca@valencia]=Jabber
 Name[de]=Jabber
 Name[en_GB]=Jabber
 Name[es]=Jabber
+Name[km]=Jabber
 Name[nb]=Jabber
 Name[nds]=Jabber
 Name[nn]=Jabber
