--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -23,6 +23,7 @@ Name[ca@valencia]=Skype
 Name[de]=Skype
 Name[en_GB]=Skype
 Name[es]=Skype
+Name[km]=Skype
 Name[nb]=Skype
 Name[nds]=Skype
 Name[nn]=Skype
