--- a/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
@@ -24,6 +24,7 @@ Name[ca@valencia]=Yahoo
 Name[de]=Yahoo
 Name[en_GB]=Yahoo
 Name[es]=Yahoo
+Name[km]=យ៉ាហ៊ូ​
 Name[nb]=Yahoo
 Name[nds]=Yahoo
 Name[nn]=Yahoo
