--- a/akonadi/contact/editor/im/protocols/smsprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/smsprotocol.desktop
@@ -9,6 +9,7 @@ Comment[ca@valencia]=Protocol SMS
 Comment[de]=SMS-Protokoll
 Comment[en_GB]=SMS Protocol
 Comment[es]=Protocolo SMS
+Comment[km]=ពិធីការ​ SMS ​​
 Comment[nb]=SMS Protokoll
 Comment[nds]=SMS-Protokoll
 Comment[nn]=SMS-protokoll
@@ -24,6 +25,7 @@ Name[ca@valencia]=SMS
 Name[de]=SMS
 Name[en_GB]=SMS
 Name[es]=SMS
+Name[km]=SMS
 Name[nb]=SMS
 Name[nds]=SMS
 Name[nn]=SMS
